--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "heroku-postbuild": "ng build",
-        "test": "ng test",
-        "postinstall": "ng build --aot -prod"
+        "test": "ng test"
+
+
     },
     "private": true,
     "dependencies": {
